# BotBattles

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  package-lock.json
.github/workflows/: backend.yml  contracts.yml  frontend.yml
backend/: pyproject.toml
contracts/: Scarb.toml
contracts/src/: RoomManager.cairo  lib.cairo
frontend/: .eslintrc.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/components/: betting-interface.tsx  wallet-connect-button.tsx  wallet-connect-modal.tsx  wallet-dropdown.tsx
frontend/hooks/: use-betting.tsx
frontend/lib/: starknet.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/betting/: page.tsx
frontend/src/components/: betting-interface.tsx  copy-buton.tsx  header.tsx  icons.tsx  navbar.tsx  starknet-provider.tsx  tab-navigation.tsx  wallet-connect-button.tsx  wallet-connect-modal.tsx  wallet-disconnect.tsx  wallet-dropdown.tsx  wallet-provider.tsx
frontend/src/components/internal/utils/: generic-modal.tsx
frontend/src/components/sections/: agents.tsx  cta.tsx  footer.tsx  hero-page.tsx  how-it-works.tsx  rooms.tsx
frontend/src/hooks/: use-betting.tsx  use-starknet-connect.tsx  use-wallet-connection.tsx
frontend/src/lib/: starknet.ts
frontend/src/motion/: animation-wrapper.tsx  background-particles.tsx  floating-particle.tsx  parallel-pixel.tsx  pixel-grid-overlay.tsx
frontend/src/types/: betting.ts
frontend/src/utils/: wallet.ts
