[tool.poetry]
name = "botbattles"
version = "0.1.0"
description = "This is the backend dependecies for BotBattles in python"
authors = ["tosoham <todrsoham@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
